// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu DropMenu mutliple selectedKeys 2 1`] = `
.c1 {
  font-size: 1.2rem;
  width: 20.833333333333336em;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 20.833333333333336em;
  max-height: 20.833333333333336em;
  overflow: hidden;
}

.c3 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-size: 1em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: block;
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  height: 2.916666666666667em;
  cursor: pointer;
  color: #333333;
  font-weight: 500;
}

.c2:hover {
  font-weight: 900;
  background-color: #edf0fe;
}

.c2:hover:after {
  color: #d0c8c8;
}

.c2:hover:after {
  color: #d0c8c8;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  display: block;
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  height: 2.916666666666667em;
  cursor: pointer;
  color: #684fff;
  font-weight: 900;
}

.c4:hover {
  font-weight: 900;
  background-color: #edf0fe;
}

.c4:after {
  color: #684fff;
}

.c4:hover:after {
  color: #684fff;
}

.c4:after {
  color: #684fff;
}

.c4:hover:after {
  color: #684fff;
}

.c0 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

<div
  className="c0"
  onWheel={[Function]}
>
  <ul
    className="c1"
    size="default"
  >
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="a"
    >
      <span
        className="c3"
      >
        a
      </span>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="b"
    >
      <span
        className="c3"
      >
        b
      </span>
    </li>
    <li
      checked={true}
      className="c4"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="c"
    >
      <span
        className="c3"
      >
        c
      </span>
    </li>
    <li
      checked={true}
      className="c4"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="d"
    >
      <span
        className="c3"
      >
        d
      </span>
    </li>
  </ul>
</div>
`;

exports[`Menu DropMenu single selectedKeys 2 1`] = `
.c1 {
  font-size: 1.2rem;
  width: 20.833333333333336em;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 20.833333333333336em;
  max-height: 20.833333333333336em;
  overflow: hidden;
}

.c3 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-size: 1em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: block;
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  height: 2.916666666666667em;
  cursor: pointer;
  color: #333333;
  font-weight: 500;
}

.c2:hover {
  font-weight: 900;
  background-color: #edf0fe;
}

.c2:hover:after {
  color: #d0c8c8;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  display: block;
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  height: 2.916666666666667em;
  cursor: pointer;
  color: #684fff;
  font-weight: 900;
}

.c4:hover {
  font-weight: 900;
  background-color: #edf0fe;
}

.c4:after {
  color: #684fff;
}

.c4:hover:after {
  color: #684fff;
}

.c0 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 20.833333333333336em;
  width: 20.833333333333336em;
  position: relative;
}

<div
  className="c0"
  onWheel={[Function]}
>
  <ul
    className="c1"
    size="default"
  >
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="a"
    >
      <span
        className="c3"
      >
        a
      </span>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="b"
    >
      <span
        className="c3"
      >
        b
      </span>
    </li>
    <li
      checked={true}
      className="c4"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="c"
    >
      <span
        className="c3"
      >
        c
      </span>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="d"
    >
      <span
        className="c3"
      >
        d
      </span>
    </li>
  </ul>
</div>
`;

exports[`Menu DropMenu width: 500px height: 333px 1`] = `
.c1 {
  font-size: 1.2rem;
  width: 45.833333333333336em;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 27.75em;
  max-height: 27.75em;
  overflow: hidden;
}

.c3 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-size: 1em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: block;
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  height: 2.916666666666667em;
  cursor: pointer;
  color: #333333;
  font-weight: 500;
}

.c2:hover {
  font-weight: 900;
  background-color: #edf0fe;
}

.c2:hover:after {
  color: #d0c8c8;
}

.c0 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 27.75em;
  width: 45.833333333333336em;
  position: relative;
}

<div
  className="c0"
  onWheel={[Function]}
>
  <ul
    className="c1"
    size="default"
  >
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="a"
    >
      <span
        className="c3"
      >
        a
      </span>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="b"
    >
      <span
        className="c3"
      >
        b
      </span>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="c"
    >
      <span
        className="c3"
      >
        c
      </span>
    </li>
    <li
      checked={false}
      className="c2"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="d"
    >
      <span
        className="c3"
      >
        d
      </span>
    </li>
  </ul>
</div>
`;

exports[`Menu children: items 1`] = `
.c3 {
  font-size: 1.2rem;
  width: 16.666666666666668em;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 20.833333333333336em;
  max-height: 20.833333333333336em;
  overflow: hidden;
}

.c5 {
  padding: 0.5833333333333334em 0.6666666666666667em;
  font-size: 1em;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  display: block;
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  height: 2.916666666666667em;
  cursor: pointer;
  color: #333333;
  font-weight: 500;
}

.c4:hover {
  font-weight: 900;
  background-color: #edf0fe;
}

.c4:hover:after {
  color: #d0c8c8;
}

.c4:hover:after {
  color: #d0c8c8;
}

.c7 {
  position: relative;
  background: rgba(255,255,255,0);
  width: 1.6666666666666667em;
  height: 25em;
  z-index: 996;
  width: 1em;
}

.c8 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 0.6666666666666667em;
  background: #c2c2c2;
  color: #fff;
  font-size: 1.2rem;
  line-height: 2.5em;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  width: 0.6666666666666667em;
  margin-left: 0.16666666666666669em;
  margin-right: 0.16666666666666669em;
}

.c8:hover {
  background-color: #7a7a7a;
}

.c2 {
  width: 16.666666666666668em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
}

.c1 {
  overflow: hidden;
  font-size: 1.2rem;
  height: 20.833333333333336em;
  width: 16.666666666666668em;
  position: relative;
}

.c0:hover .c9 {
  opacity: 1;
}

.c6 {
  width: 16.666666666666668em;
  font-size: 1.2rem;
  position: absolute;
  display: inline-block;
  left: 15.666666666666668em;
  width: 1em;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c6 {
  opacity: 1;
}

<div
  className="c0 c1"
  onWheel={[Function]}
>
  <div
    className="c2"
  >
    <ul
      className="c3"
      size="default"
    >
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          0
        </span>
      </li>
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          1
        </span>
      </li>
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          2
        </span>
      </li>
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          3
        </span>
      </li>
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          4
        </span>
      </li>
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          5
        </span>
      </li>
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          6
        </span>
      </li>
      <li
        checked={false}
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseEnter={[Function]}
        title=""
      >
        <span
          className="c5"
        >
          7
        </span>
      </li>
    </ul>
  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "20.833333333333336em",
        }
      }
    >
      <div
        className="c8"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "14.916666666666666em",
            "top": "0em",
          }
        }
      />
    </div>
  </div>
</div>
`;
